# ko-po-check

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  HACKING  MANIFEST.in  Makefile.am  NEWS  NEWS.md  README  README.md  THANKS  TODO  autogen.sh  configure.ac  configure.in  index.html  make-dist.sh  setup.py  update-changelog.sh
.github/workflows/: test.yml
KPC/: Makefile.am  classes.py  config.py  po.py  poparse.py
checks/: Makefile.am
checks/convention/: Makefile.am  capital_mnemonic.py  consistency.py  copyright.py  gnome.py  kde.py  markup-pango.py  markup.py  mnemonic.py
checks/language/: Makefile.am  spell.py  (+3 more)
doc/: .cvsignore  Makefile.am  ko-po-check.xml  spelling-rule.xml
misc/: check-gnome-po.sh  check-kde-po.sh  check-tp-po.sh  get-gnome-po.sh  get-kde-po.sh  get-tp-po.sh
scripts/: .cvsignore  Makefile.am  ko-po-check  ko-po-check.in
src/: .cvsignore  Makefile.am  ko-po-check.in  localeutil.py  po.py  poparse.py  test.py
tests/: Makefile  Makefile.am  kpc-test  test-00001.out  test-00001.po  test-00001.test  test-00002.out  test-00002.po  test-00002.test  test-00003.out  test-00003.po  test-00003.test  test-00004.out  test-00004.po  test-00004.test  test-00005.out  test-00005.po  test-00005.test  test-00006.out  test-00006.po  test-00007.out  test-00007.po  test-00007.test  test-00008.out  test-00008.po  test-00008.test  test-00009.out  test-00009.po  test-00009.test  test-00010.out  test-00010.po  test-00010.test  test-00011.out  test-00011.po  test-00011.test  test-00012.out  test-00012.po  test-00012.test  test-00013.out  test-00013.po  (+107 more)
(+47 files in other folders)
