AC_INIT(README)
AM_INIT_AUTOMAKE(ko-po-check,0.7)

AM_PATH_PYTHON(2.0)

AC_OUTPUT([
Makefile
doc/Makefile
tests/Makefile
KPC/Makefile
checks/Makefile
checks/convention/Makefile
checks/language/Makefile
checks/terminology/Makefile
scripts/Makefile
scripts/ko-po-check
],[
chmod +x scripts/ko-po-check
])
